# server-from-scratch

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt
src/client/: CMakeLists.txt  main.cpp  tcpClient.cpp  tcpClient.h
src/server/: CMakeLists.txt  main.cpp  tcpListener.cpp  tcpListener.h  webServer.cpp  webServer.h
wwwroot/: foo.html  index.html
